# CursWorkOOP

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/bank/: bank.cpp
src/cryptocurrency/: cryptocurrency.cpp
src/currency/: currency.cpp
src/local_db/: local_db.cpp
src/metal/: metal.cpp
src/saving/: saving.cpp
src/test/: test.cpp
src/transaction/: transaction.cpp
src/transaction-history/: transaction-history.cpp
src/user-input-handler/: userInputHandler.cpp
src/user-interface/: userInterface.cpp
